; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_gadget.c_cdns3_trb_virt_to_dma.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/cdns3/extr_gadget.c_cdns3_trb_virt_to_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdns3_endpoint = type { i32, i64 }
%struct.cdns3_trb = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cdns3_trb_virt_to_dma(%struct.cdns3_endpoint* %0, %struct.cdns3_trb* %1) #0 {
  %3 = alloca %struct.cdns3_endpoint*, align 8
  %4 = alloca %struct.cdns3_trb*, align 8
  %5 = alloca i32, align 4
  store %struct.cdns3_endpoint* %0, %struct.cdns3_endpoint** %3, align 8
  store %struct.cdns3_trb* %1, %struct.cdns3_trb** %4, align 8
  %6 = load %struct.cdns3_trb*, %struct.cdns3_trb** %4, align 8
  %7 = bitcast %struct.cdns3_trb* %6 to i8*
  %8 = load %struct.cdns3_endpoint*, %struct.cdns3_endpoint** %3, align 8
  %9 = getelementptr inbounds %struct.cdns3_endpoint, %struct.cdns3_endpoint* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = ptrtoint i8* %7 to i64
  %13 = ptrtoint i8* %11 to i64
  %14 = sub i64 %12, %13
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %5, align 4
  %16 = load %struct.cdns3_endpoint*, %struct.cdns3_endpoint** %3, align 8
  %17 = getelementptr inbounds %struct.cdns3_endpoint, %struct.cdns3_endpoint* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = add nsw i32 %18, %19
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
